fix FangCounterSkill stack inconsistencies, adjust ParryEffectPacketHandler